Nexter Project: Make Reponsive With Small Change With Media Query

--- a/index.html
+++ b/index.html
@@ -33,21 +33,17 @@
             <div class="realtors__list">
                 <img alt="Realtor 1" class="realtors__img" src="img/realtor-1.jpeg">
                 <div class="realtors__details">
-                    <h4 class="heading-4 heading-4-light">realtor 1</h4>
+                    <h4 class="heading-4 heading-4-light">Realtor 1</h4>
                     <div class="realtors__sold">100 Houses Sold</div>
                 </div>
-            </div>
-            <div class="realtors__list">
                 <img alt="Realtor 2" class="realtors__img" src="img/realtor-2.jpeg">
                 <div class="realtors__details">
-                    <h4 class="heading-4 heading-4-light">realtor 2</h4>
+                    <h4 class="heading-4 heading-4-light">Realtor 2</h4>
                     <div class="realtors__sold">200 Houses Sold</div>
                 </div>
-            </div>
-            <div class="realtors__list">
                 <img alt="Realtor 3" class="realtors__img" src="img/realtor-3.jpeg">
                 <div class="realtors__details">
-                    <h4 class="heading-4 heading-4-light">realtor 3</h4>
+                    <h4 class="heading-4 heading-4-light">Realtor 3</h4>
                     <div class="realtors__sold">300 Houses Sold</div>
                 </div>
             </div>
