--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <button class="btn header__btn">View our properties</button>
             <div class="header__seenon-text">As Seen On</div>
             <div class="header__seenon-logos">
-                <img src="/img/logo-bbc.png" alt="Seen on logo 1">
-                <img src="/img/logo-forbes.png" alt="Seen on logo 2">
-                <img src="/img/logo-techcrunch.png" alt="Seen on logo 3">
-                <img src="/img/logo-bi.png" alt="Seen on logo 4">
+                <img src="img/logo-bbc.png" alt="Seen on logo 1">
+                <img src="img/logo-forbes.png" alt="Seen on logo 2">
+                <img src="img/logo-techcrunch.png" alt="Seen on logo 3">
+                <img src="img/logo-bi.png" alt="Seen on logo 4">
             </div>
         </header>
         <div class="realtors">
